# camerasim

./: CMakeLists.txt  README.md  package.xml
config/: global_config.yaml
description/models/camera/: model.config  model.sdf
launch/: camerasim.launch
scripts/: model_up.sh
worlds/: camerasim.world
